Fix layout on mobile

--- a/files/static/styles/dark.css
+++ b/files/static/styles/dark.css
@@ -16,6 +16,11 @@ a:hover {
     color: red;
 }
 
+.header a span {
+    display: inline-flex;
+    white-space: pre;
+}
+
 .container {
     max-width: 820px;
     margin: 0 auto;
