--- a/files/static/styles/greenish.css
+++ b/files/static/styles/greenish.css
@@ -117,6 +117,11 @@ iframe {
     width: 100%;
 }
 
+.seg {
+    opacity: 0;
+    font-size: 0px;
+}
+
 @media only screen and (max-width: 600px) {
     .dialog-content {
         width: auto !important;
